[gd_scene load_steps=6 format=3 uid="uid://ri7wh2c7sw6s"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_0d63i"]
[ext_resource type="PackedScene" uid="uid://dppsonjdlmlsc" path="res://world_generation/world_gen.tscn" id="1_iydg2"]
[ext_resource type="Texture2D" uid="uid://7bd7s84xiwtu" path="res://title.png" id="1_q4hag"]
[ext_resource type="Texture2D" uid="uid://3msq0dsy3yf7" path="res://peglegbackground.png" id="2_8opyg"]
[ext_resource type="Script" path="res://settings_screen.gd" id="4_rlogm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0d63i")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.784314, 0.784314, 0.784314, 1)
layout_mode = 0
offset_right = 2048.0
offset_bottom = 1024.0
texture = ExtResource("2_8opyg")

[node name="HomeScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HomeScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -444.0
offset_right = 386.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_q4hag")

[node name="VBoxContainer" type="VBoxContainer" parent="HomeScreen"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 102.0
offset_right = 100.0
offset_bottom = 272.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="HomeScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="HomeScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Controls"

[node name="ExitButton" type="Button" parent="HomeScreen/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit"

[node name="WorldGenScreen" parent="." instance=ExtResource("1_iydg2")]
visible = false
layout_mode = 1

[node name="SettingsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rlogm")

[node name="ColorRect" type="ColorRect" parent="SettingsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -135.0
offset_right = 140.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.580392)

[node name="BackButton" type="Button" parent="SettingsScreen"]
layout_mode = 0
offset_left = -9.0
offset_top = 92.0
offset_right = 36.0
offset_bottom = 123.0
text = "Back"

[node name="Label" type="Label" parent="SettingsScreen"]
layout_mode = 0
offset_left = -20.0
offset_top = -79.0
offset_right = 50.0
offset_bottom = -56.0
text = "Controls"

[node name="Label2" type="Label" parent="SettingsScreen"]
layout_mode = 0
offset_left = -102.0
offset_top = -36.0
offset_right = 144.0
offset_bottom = 65.0
text = "A/D: Turn left and right
W/S: Change speed
Spacebar: Interact/Fire cannons
Z: Anchor"
horizontal_alignment = 1

[connection signal="pressed" from="HomeScreen/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HomeScreen/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HomeScreen/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="WorldGenScreen/BackButton" to="WorldGenScreen" method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsScreen/BackButton" to="SettingsScreen" method="_on_back_button_pressed"]

[editable path="WorldGenScreen"]
